--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "postcss-cli": "^8.2.0"
   }
 }
