--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/docsy"]
 	path = themes/docsy
 	url = https://github.com/google/docsy.git
+[submodule "content/til"]
+	path = content/til
+	url = https://github.com/Jeonghun-Ban/TIL
