feat: Add terms and conditions notice to footer

--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,9 @@ defaultContentLanguage = "ko"
 time_format_default = "2006.01.02"
 time_format_blog = "2006.01.02"
 
+[params]
+copyright_website = "Jeonghun-Ban"
+
 # Enable Lunr.js offline search
 offlineSearch = true
 
