--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,13 @@ jobs:
         with:
           submodules: recursive
 
+      - name: npm install
+        uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '15.3.0'
+      - run: npm install
+
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
