--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,17 +1,23 @@
 [[main]]
   identifier = "about"
-  name = "👨‍💻 About"
+  name = "📖 About"
   url = "/about/"
   weight = 1
+
+[[main]]
+  identifier = "resume"
+  name = "👨‍💻 Resume"
+  url = "/resume/"
+  weight = 2
 
 [[main]]
   identifier = "posts"
   name = "📝 Posts"
   url = "/posts/"
-  weight = 2
+  weight = 3
 
 [[main]]
   identifier = "tils"
   name = "🔥 TIL"
   url = "/TIL/docs/"
-  weight = 2
+  weight = 4
