--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,8 +15,8 @@ enableEmoji = true
 paginate = 13
 rssLimit = 100
 
-enableGitInfo = false # When true, the modified date will appear on a summary and single page. Since GitHub info needs to be fetched, this feature will slow down to build depending on a page number you have
-googleAnalytics = ""
+enableGitInfo = false
+googleAnalytics = "UA-186109814-1"
 
 [markup]
   [markup.goldmark]
