--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -4,6 +4,8 @@ logo = true
 description = ""
 useFaviconGenerator = true
 
+custom_css = ["css/font.css"]
+
 themeOptions = ["dark", "light", "hacker", "solarized", "kimbie"] # select options for site color theme
 notAllowedTypesInHome = ["contact", "talks", "about", "showcase"] # not allowed page types in home page. type can be set in front matter or default to folder name.
 notAllowedTypesInHomeSidebar = ["about", "archive", "showcase"] # not allowed page types in home page sidebar(recent post titles).
