chore: Update instagram link

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -145,7 +145,7 @@ commento = false
   twitter = ""
   github = "https://github.com/Jeonghun-Ban"
   stack-overflow = ""
-  instagram = "https://www.instagram.com/bj_h00n/"
+  instagram = "https://www.instagram.com/junghoon.vans/"
   google-plus = ""
   youtube = ""
   medium = ""
