--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -25,3 +25,9 @@ outputs:
     - HTML
     - RSS
     - JSON
+
+assets:
+    favicon: "/favicon.ico"
+    favicon16x16:  "/favicon-16x16.png"
+    favicon32x32:  "/favicon-32x32.png"
+    apple_touch_icon:  "/apple-touch-icon.png"
