--- a/config/_default/menus.ko.yaml
+++ b/config/_default/menus.ko.yaml
@@ -1,13 +1,16 @@
 main:
   - name: Archive
     url: archives/
-    weight: 5
-  - name: Search
-    url: search/
-    weight: 10
+    weight: 1
   - name: Tags
     url: tags/
-    weight: 10
+    weight: 2
   - name: Categories
     url: categories/
-    weight: 10
+    weight: 3
+  - name: Series
+    url: series/
+    weight: 4
+  - name: Search
+    url: search/
+    weight: 5
