--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,9 +20,9 @@ socialIcons:
   - name: instagram
     url: "https://www.instagram.com/junghoon.vans"
   - name: facebook
-    url: "https://www.facebook.com/profile.php?id=100008030658971"
+    url: "https://www.facebook.com/junghoon.vans"
   - name: linkedin
-    url: "https://www.linkedin.com/in/junghoon-ban-783744243"
+    url: "https://www.linkedin.com/in/junghoon-ban"
   - name: email
     url: "mailto:junghoon.ban@email.com"
 
