chore: Add vanstil link to home description

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,5 +1,5 @@
 env: production
-description: &description "백엔드 개발자 반정훈의 기술 블로그입니다."
+description: "백엔드 개발자 반정훈의 기술 블로그입니다."
 author: junghoon-vans
 
 defaultTheme: auto
@@ -12,7 +12,9 @@ comments: true
 
 homeInfoParams:
   Title: "Hello World!"
-  Content: *description
+  Content: |
+    백엔드 개발자 반정훈의 기술 블로그입니다.
+    TIL 컨텐츠는 [Vanstil](https://til.vanslog.io)에서 확인하실 수 있습니다. 
 
 socialIcons:
   - name: github
