chore(config): Migrate universal google analytics to ga4

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,7 +10,7 @@ buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-googleAnalytics: UA-186109814-1
+googleAnalytics: G-LRH9813WJ0
 defaultContentLanguage: ko
 
 markup:
