--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ socialIcons:
   - name: github
     url: "https://github.com/junghoon-vans"
   - name: instagram
-    url: "https://www.instagram.com/junghoon.vans"
+    url: "https://www.instagram.com/vanslog.io"
   - name: facebook
     url: "https://www.facebook.com/junghoon.vans"
   - name: linkedin
