chore: Fix incorrect email address

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,7 +24,7 @@ socialIcons:
   - name: linkedin
     url: "https://www.linkedin.com/in/junghoon-ban"
   - name: email
-    url: "mailto:junghoon.ban@email.com"
+    url: "mailto:junghoon.ban@gmail.com"
 
 editPost:
   URL: "https://github.com/junghoon-vans/vanslog/tree/main/content"
