chore: Change twitter to x.com

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ socialIcons:
   - name: github
     url: "https://github.com/junghoon-vans"
   - name: X
-    url: "https://twitter.com/junghoon_vans"
+    url: "https://x.com/junghoon_vans"
   - name: linkedin
     url: "https://www.linkedin.com/in/junghoon-ban"
   - name: email
